Fix gap in navbar link

--- a/src/App.css
+++ b/src/App.css
@@ -168,6 +168,7 @@ select:focus {
     display: flex;
     order: 1;
     width: 70%;
+    gap: 15px;
   }
 
   .auth {
